--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,6 @@ services:
     image: neosmemo/memos:latest
     container_name: memos
     volumes:
-      - ~/.memos/:/var/opt/memos
+      - /opt/containers-data/memos/:/var/opt/memos
     ports:
-      - 5230:5230
+      - 52300:5230
